# rubikpi_ros2

./: .gitignore  CAMERA_CALIBRATION_GUIDE.md  EKF_SLAM_MATRIX_DIMENSIONS.md  EKF_SLAM_PEST_CODE_REFERENCE.md  EKF_SLAM_PEST_EXPLAINED.md  EKF_SLAM_README.md  EKF_SLAM_STEP_BY_STEP_WALKTHROUGH.md  EKF_SLAM_UPDATE_STEP.md  EKF_SLAM_UPDATE_STEPS_QUICK_REFERENCE.md  TF_TREE_SETUP.md
apriltag_ros/cfg/: tags_36h11.yaml
grid_coverage_base/: CMakeLists.txt  package.xml
grid_coverage_base/include/grid_coverage_base/: grid_map.hpp
grid_coverage_base/src/: grid_map.cpp
hw_3/: package.xml  setup.cfg  setup.py
hw_3/configs/: ekf_slam_params.yaml  ground_truth_landmarks.yaml
hw_3/hw_3/: ekf_slam_core.py  ekf_slam_node.py  hw3.py  plot_slam_results.py  velocity_mapping.py
hw_3/launch/: ekf_slam.launch.py  hw3.launch.py
hw_4/: package.xml  setup.cfg  setup.py
hw_4/configs/: ekf_slam_params.yaml  ground_truth_landmarks.yaml
hw_4/hw_4/: ekf_slam_core.py  ekf_slam_node.py  hw4.py  plot_slam_results.py  velocity_mapping.py
hw_4/launch/: ekf_slam.launch.py  hw4.launch.py
hw_5/: CMakeLists.txt  package.xml  setup.py
hw_5/configs/: ekf_slam_params.yaml  ground_truth_landmarks.yaml
hw_5/hw_5/: camera_tf.py  ekf_slam_node.py  hw5.py  motor_control.py  plot_slam_results.py  velocity_mapping.py
hw_5/hw_5/install/: local_setup.sh  setup.sh
hw_5/hw_5/log/: latest_build
hw_5/install/: local_setup.sh  setup.sh
hw_5/install/hw_5/include/hw_5/hw_5/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
hw_5/install/hw_5/include/hw_5/hw_5/srv/: get_workspace_bounds.hpp
hw_5/install/hw_5/include/hw_5/hw_5/srv/detail/: get_workspace_bounds__functions.h  get_workspace_bounds__rosidl_typesupport_fastrtps_cpp.hpp  get_workspace_bounds__rosidl_typesupport_introspection_c.h  get_workspace_bounds__rosidl_typesupport_introspection_cpp.hpp  get_workspace_bounds__struct.h  get_workspace_bounds__traits.hpp  get_workspace_bounds__type_support.c  get_workspace_bounds__type_support.h
hw_5/install/hw_5/lib/hw_5/: ekf_slam_node.py  hw5.py
hw_5/install/hw_5/share/ament_index/resource_index/package_run_dependencies/: hw_5
hw_5/install/hw_5/share/ament_index/resource_index/parent_prefix_path/: hw_5
hw_5/install/hw_5/share/hw_5/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
hw_5/install/hw_5/share/hw_5/cmake/: ament_cmake_export_include_directories-extras.cmake  export_hw_5__rosidl_generator_cExport-noconfig.cmake  export_hw_5__rosidl_generator_cppExport.cmake  export_hw_5__rosidl_generator_pyExport-noconfig.cmake  export_hw_5__rosidl_generator_pyExport.cmake  export_hw_5__rosidl_typesupport_fastrtps_cExport.cmake  export_hw_5__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  hw_5__rosidl_typesupport_introspection_cExport-noconfig.cmake  hw_5__rosidl_typesupport_introspection_cExport.cmake  hw_5__rosidl_typesupport_introspection_cppExport-noconfig.cmake  hw_5__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
hw_5/install/hw_5/share/hw_5/configs/: apriltags_position.yaml  ground_truth_landmarks.yaml
hw_5/install/hw_5/share/hw_5/launch/: ekf_slam.launch.py  hw5.launch.py
hw_5/launch/: hw5.launch.py
hw_5/log/: latest_build
prm_planner/: CMakeLists.txt  package.xml  setup.cfg.bak  setup.py
prm_planner/prm_planner/: Add_Safe_and_Distance_Planning_Modes.md  PRM Planner ROS2 Node Implementation Pla.md  prm_core.py  prm_planner_node.py  visualize_safe_vs_distance.py
prm_planner/srv/: GetPRMPath.srv
robot_control/: WAYPOINT_NAVIGATION.md  setup.py  waypoints.txt
robot_control/examples/: waypoint_navigation_examples.py
robot_control/launch/: advanced_waypoint_navigation_launch.py  waypoint_navigation_launch.py
robot_control/robot_control/: advanced_waypoint_navigation.py  file_waypoint_navigation.py  waypoint_navigation.py
robot_vision/config/: camera_parameter.yaml
robot_vision/include/robot_vision_camera/: robot_vision_camera.h
robot_vision/src/: robot_vision_camera.cpp
vroomba_coordinator/: CMakeLists.txt  package.xml
vroomba_coordinator/include/vroomba_coordinator/: vroomba_coordinator.hpp  vroomba_coordinator_node.hpp
vroomba_coordinator/src/: vroomba_coordinator.cpp
vroomba_coordinator/srv/: GetNextWaypoint.srv
